--- a/src/mooch/.gitignore
+++ b/src/mooch/.gitignore
@@ -13,5 +13,10 @@ web-build/
 # macOS
 .DS_Store
 
+# Environment variables
+.env
+.env.local
+.env.production
+
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
